--- a/app.json
+++ b/app.json
@@ -27,12 +27,8 @@
         "description": "Your Telegram Bot Token, get it from @Botfather XD",
         "required": true
       },
-      "BOT_USERNAME": {
-        "description": "Your Telegram Bot Username without @, get it from @Botfather XD",
-        "required": true
-      },
       "SESSION_STRING": {
-        "description": "Pyrogram Session String of User Account, get it from https://replit.com/@ZauteKm/GenerateStringSession",
+        "description": "Pyrogram Session String of User Account, get it from @genStr_robot",
         "required": true
       },
       "CHAT_ID": {
