--- a/app.json
+++ b/app.json
@@ -1,47 +1,61 @@
 {
-    "name": "Telegram Video Player Bot",
-    "description": "An Telegram Bot By @ZauteKm To Stream Videos in Voice Chat",
+    "name": "VCPlayerBot",
+    "description": "Telegram bot to stream video in telegram VC",
     "repository": "https://github.com/ZauteKm/vcVideoPlayer",
     "stack": "container",
     "keywords": [
       "telegram",
-      "voicechat",
       "bot",
-      "video",
-      "player",
+      "voicechat",
+      "music",
       "python",
       "pyrogram",
       "pytgcalls",
-      "videoplayer"
+      "tgcalls",
+      "voip"
     ],
     "env": {
       "API_ID": {
-        "description": "User Account Telegram API_ID get it from my.telegram.org/apps",
+        "description": "api_id part of your Telegram API Key from my.telegram.org/apps",
         "required": true
       },
       "API_HASH": {
-        "description": "User Account Telegram API_HASH get it from my.telegram.org/apps",
+        "description": "api_hash part of your Telegram API Key from my.telegram.org/apps",
         "required": true
       },
       "BOT_TOKEN": {
-        "description": "Your Telegram Bot Token, get it from @Botfather XD",
+        "description": "Bot token of Bot, get from @Botfather",
         "required": true
       },
       "SESSION_STRING": {
-        "description": "Pyrogram Session String of User Account, get it from @genStr_robot",
+        "description": "Session string, read the README to learn how to export it with Pyrogram",
         "required": true
       },
-      "CHAT_ID": {
-        "description": "ID of your Channel or Group where the bot will works or stream videos",
+      "CHAT": {
+        "description": "ID of Channel or Group where the Bot plays Music",
         "required": true
       },
-      "AUTH_USERS": {
-        "description": "ID of Auth Users who can use Admin commands (for multiple users seperated by space)",
+      "LOG_GROUP": {
+        "description": "ID of the group to send playlist If CHAT is a Group, if channel thenleave blank",
+        "required": false
+      },
+      "ADMINS": {
+        "description": "ID of Users who can use Admin commands(for multiple users seperated by space)",
         "required": true
+      },
+      "ADMIN_ONLY": {
+        "description": "Change it to 'N' if you want to make /play and /dplay available for everyone. By default only admins of CHAT can use it.",
+        "value": "Y",
+        "required": false
+      },
+      "STARTUP_STREAM": {
+        "description": "YouTube live / Direct link to a video / Telegram link to a YouTube playlist.(Read the README for more info.) ",
+        "value": "https://youtu.be/zcrUCvBD16k",
+        "required": false
       },
       "REPLY_MESSAGE": {
         "description": "A reply message to those who message the USER account in PM. Make it blank if you do not need this feature.",
-        "value": "Hello Sir, I'm a bot to stream videos on telegram voice chat, not having time to chat with you 😂!",
+        "value": "Helo Ser, Iam a bot to play music, not havimg time to chat with you.",
         "required": false
       }
     },
